# Dikenocracy

./: .gitignore
Converter DTI/: .gitignore  PROTOCOL_NOTES.md  README.md  pyproject.toml  pytest.ini  requirements.txt
Converter DTI/converter_dti/: __init__.py  config.py
Converter DTI/converter_dti/api/: main.py  schemas.py
Converter DTI/converter_dti/api/routes/: convert.py  health.py
Converter DTI/converter_dti/domain/: __init__.py  constants.py  dti.py  errors.py  formatting.py  gregorian.py  hebrew.py  models.py  service.py
Converter DTI/converter_dti/tests/: __init__.py  test_api.py  test_dti_roundtrip.py  test_gregorian_to_jdn.py  test_hebrew_parsing.py  test_jdn_to_gregorian.py  test_protocol_vectors.py
Converter DTI/converter_dti/ui/: i18n.py  streamlit_app.py
deploy/: nginx.conf
website/: .gitignore  404.html  SITE_AUDIT.md  add_i18n_attrs.py  build_protocols.py  i18n.js  index.html  robots.txt  script.js  sitemap.xml  styles.css
website/assets/: Dikenocracy SYNERGY and 31 PROTOCOLS .md  README.txt
website/converter/: index.html
website/docs/: Translation_Roadmap.md
website/i18n/: Terminology.md  dkp_terms.json  ui_labels.json
website/i18n/protocols/: dkp-1-axioms-001.json
website/pages/: about.html  converter.html  projects.html  protocols.html
website/pages/protocols/: appendix-a-design-rationale-safeguards-normative.html  code-of-planetary-synergy.html  dikenocracy.html  dkp-0-oracle-001.html  dkp-0-time-001.html  dkp-1-axioms-001.html  dkp-1-identity-001.html  dkp-1-impact-001.html  (+29 more)
website/scripts/: sync_protocols.py
